--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 		<input type="text" id="urlInput" placeholder="Enter URL here...">
 		<button id="generateBtn">Generate</button>
 		<div id="qrCode"></div>
-		<a href="#" id="downloadBtn" download="qr-code.png">Download QR Code</a>
 	</div>
 
-	<script src="qrcode.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
