--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="qrCode"></div>
 	</div>
 
+	<script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/dist/qrcode.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script>
 	<script src="script.js"></script>
 </body>
