--- a/index.html
+++ b/index.html
@@ -14,48 +14,7 @@
 		<a href="#" id="downloadBtn" download="qr-code.png">Download QR Code</a>
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/dist/qrcode.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script>
+	<script src="qrcode.min.js"></script>
 	<script src="script.js"></script>
-	<script>
-		const urlInput = document.getElementById('urlInput');
-		const generateBtn = document.getElementById('generateBtn');
-		const qrCodeDiv = document.getElementById('qrCode');
-		const downloadBtn = document.getElementById('downloadBtn');
-
-		generateBtn.addEventListener('click', generateQRCode);
-
-		function generateQRCode() {
-			const url = urlInput.value;
-			if (url === '') {
-				alert('Please enter a URL');
-				return;
-			}
-
-			const qrCode = new QRCode(qrCodeDiv, {
-				text: url,
-				width: 256,
-				height: 256,
-				colorDark: '#000000',
-				colorLight: '#ffffff',
-				correctLevel: QRCode.CorrectLevel.H
-			});
-
-			qrCodeDiv.style.display = 'block';
-			downloadBtn.style.display = 'block';
-			downloadBtn.disabled = false;
-			downloadBtn.addEventListener('click', downloadQRCode);
-		}
-
-		function downloadQRCode() {
-			const qrCodeImage = qrCodeDiv.querySelector('img');
-			qrCodeImage.addEventListener('load', function() {
-				const downloadLink = document.createElement('a');
-				downloadLink.href = qrCodeImage.src;
-				downloadLink.download = 'qr-code.png';
-				downloadLink.click();
-			});
-		}
-	</script>
 </body>
 </html>
