--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>QR Code Generator</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 	<div class="container">
