--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>QR Code Generator</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="container">
-		<h1>QR Code Generator</h1>
-		<p>Enter a link below to generate a QR code:</p>
-		<input type="text" id="urlInput" placeholder="Enter URL here...">
-		<button id="generateBtn">Generate</button>
-		<div id="qrCode"></div>
-		<div id="downloadContainer"></div>
-	</div>
-
-	<script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/dist/qrcode.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
-	<script src="script.js"></script>
+	<h1>QR Code Generator</h1>
+	<form>
+		<label for="urlInput">Enter a URL:</label>
+		<input type="text" id="urlInput" name="urlInput">
+		<button id="generateBtn" type="button">Generate QR Code</button>
+	</form>
+	<div id="qrCode"></div>
+	<div id="downloadContainer"></div>
+	<script src="https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/qrcode.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+	<script src="qr-code-generator.js"></script>
 </body>
 </html>
